# Chatbot

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  app.py  chatbot.py  main.py  navbar.css  pyproject.toml  requirements.txt  run_api.py  setup.py  stylepage.css  stylesidebar.css
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: secrets.toml
api/: main.py
api/middleware/: auth.py  logging_middleware.py
api/models/: schemas.py
api/routers/: chat.py  documents.py  health.py  images.py
assets/: styles.css
config/: __init__.py  settings.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: app.js
postman/: Chatbot_API_Collection.json
src/: __init__.py
src/core/: __init__.py  gemini_client.py  memory_manager.py  session_manager.py
src/pipeline/: pipeline_manager.py
src/pipeline/stages/: ai_stage.py  context_stage.py  input_stage.py  output_stage.py
src/ui/: __init__.py  components.py
src/utils/: __init__.py  file_processor.py
