[project]
name = "google"
version = "0.1.0"
description = "\"it is a test\""
authors = [
    {name = "Moulik"}
]
license = {text = "Moulik"}
readme = "README.md"
requires-python = "3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
